# codegame

./: LICENSE  README.md  main.py  pyproject.toml
output/: codenames.xlsx  placeholder.txt
